all of the pages are now responsive with 4 different layouts based on 3 break points based on width: 640px, 768px, 980px

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 	<title>Contact</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="wrapper">
+
 	<div class="layout">
 		<div class="container">
 			<div class="containerInner">
@@ -32,13 +33,13 @@
 				<div class="content">
 					<form class="contactForm" action="" method="post">
 						<fieldset>
-							<input placeholder="Your name" type="text" name="name" tabindex="1" autofocus required>
+							<input placeholder="John Smith" type="text" name="name" tabindex="1" autofocus required>
 						</fieldset>
 						<fieldset>
-							<input placeholder="Email" type="email" name="email" tabindex="2" required>
+							<input placeholder="example@domain.com" type="email" name="email" tabindex="2" required>
 						</fieldset>
 						<fieldset>
-							<textarea placeholder="Message" name="message" tabindex="3" required></textarea>
+							<textarea placeholder="Your Message" name="message" tabindex="3" required></textarea>
 						</fieldset>
 						<button name="submit" type="submit">Submit</button>
 					</form>
